model ContractJourney {
    id String @id @unique @db.Uuid

    caregiverOrder String[]  @map("caregiver_order")
    createdAt      DateTime? @default(now()) @map("created_at") @db.Date

    contractId String   @map("contract_id") @db.Uuid
    contract   Contract @relation(fields: [contractId], references: [id], onDelete: Cascade)

    @@map("contract_journey")
}
