model ContractPayment {
    id         String @id @unique @default(uuid()) @db.Uuid
    contractId String @map("contract_id") @db.Uuid

    value     String
    createdAt DateTime? @default(now()) @map("created_at") @db.Date
    proof     String

    Contract Contract @relation(fields: [contractId], references: [id], onDelete: Cascade)

    @@map("contract_payment")
}
