enum ADMINISTRATIVE_LEVEL {
    READ   @map("read")
    UPDATE @map("update")
    DELETE @map("delete")

    @@map("administrative_level")
}

model Admin {
    credentialId        String               @id @unique @map("credential_id") @db.Uuid
    administrativeLevel ADMINISTRATIVE_LEVEL @map("administrative_level")

    Credential Credential @relation(fields: [credentialId], references: [personId], onDelete: Cascade)

    @@map("admin")
}
