model Costumer {
    credentialId   String       @id @unique @map("credential_id") @db.Uuid
    favoriteScales TIME_SCALE[] @map("favorite_scale")

    Credential Credential @relation(fields: [credentialId], references: [personId], onDelete: Cascade)
    Patients   Patient[]

    @@map("costumer")
}
