model Credential {
    personId String @id @unique @map("person_id") @db.Uuid
    
    email    String @unique
    CPF      String @unique @map("cpf")
    RG       String @unique @map("rg")

    Person Person @relation(fields: [personId], references: [id], onDelete: Cascade)

    @@map("credential")
}
