enum TIME_SCALE {
    HOUR_24    @map("24")
    HOUR_24X24 @map("24x24")
    HOUR_24X48 @map("24x48")
    HOUR_12X36 @map("12x36")
    HOUR_48X48 @map("48x48")
    WEEKDAY    @map("weekday")
    WEEKEND    @map("weekend")
    WILDCARD   @map("wildcard")

    @@map("time_scale")
}

enum DISEASE {
    ELDERLY       @map("elderly")
    WHELLCHAIR    @map("wheelchair")
    BED           @map("bed")
    GLUCOSE       @map("glucose")
    HIGH_PRESSURE @map("high_pressure")
    PARKISON      @map("parkison")
    ALZHEIMER     @map("alzheimer")
    DEMENTIA      @map("dementia")
    COLOSTOMY     @map("colostomy")
    AIDS          @map("aids")
    TRACHEOSTOMY  @map("tracheostomy")
    GASTROTOMY    @map("gastrostomy")

    @@map("experience")
}

model Caregiver {
    workerId            String       @id @unique @map("worker_id") @db.Uuid
    smoker              Boolean
    allergyReport       String       @map("allergy_report")
    uniqueTicket        String       @unique @map("unique_ticket")
    availableTimeScales TIME_SCALE[] @map("available_time_scales")
    diseaseExperiences  DISEASE[]    @map("disease_experiences")

    Worker Worker @relation(fields: [workerId], references: [credentialId], onDelete: Cascade)

    @@map("caregiver")
}
