model CaregiverPayment {
    id String @id @unique @default(uuid()) @db.Uuid

    value     String
    createdAt DateTime? @default(now()) @map("created_at") @db.Date
    proof     String

    caregiverToContractId String              @map("caregiver_to_contract_id") @db.Uuid
    CaregiverToContract   CaregiverToContract @relation(fields: [caregiverToContractId], references: [id], onDelete: Cascade)

    @@map("caregiver_payment")
}
