model CaregiverToContract {
    id          String @id @unique @default(uuid()) @db.Uuid
    contractId  String @map("contract_id") @db.Uuid
    caregiverId String @map("caregiver_id") @db.Uuid

    Contract  Contract  @relation(fields: [contractId], references: [id], onDelete: Cascade)
    Caregiver Caregiver @relation(fields: [caregiverId], references: [workerId], onDelete: Cascade)

    @@map("caregiver_to_contract")
}
