enum WORKER_STATUS {
    WORKING @map("working")
    FREE    @map("free")
    FIRED   @map("fired")

    @@map("worker_status")
}

enum CIVIL_STATUS {
    SINGLE    @map("single")
    MARRIED   @map("married")
    SEPARETED @map("separated")
    DIVORCED  @map("divorced")
    WIDOW     @map("widow")

    @@map("civil_status")
}

model Worker {
    credentialId String        @id @unique @map("credential_id") @db.Uuid
    
    PIS          String        @unique @map("pis")
    dependents   Int           @default(0)
    workerStatus WORKER_STATUS @map("worker_status")
    civilStatus  CIVIL_STATUS  @map("civil_status")

    Credential Credential @relation(fields: [credentialId], references: [personId], onDelete: Cascade)

    @@map("worker")
}
